--- a/Task-8/page-3/chart.html
+++ b/Task-8/page-3/chart.html
@@ -17,7 +17,7 @@
 
 <body>
     <center>
-        <h3>Place your graph here</h3>
+        <h3>The Graph</h3>
     </center>
     <div>
         <canvas id="myChart"></canvas>
